--- a/src/App.css
+++ b/src/App.css
@@ -1025,8 +1025,9 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center; /* Center all content vertically */
-    padding: 30px;
+    padding: 30px 30px 50px 30px;
     gap: 20px;
+    height: 270px;
   }
 
   .footer-logo {
@@ -1035,7 +1036,7 @@ hr {
   }
 
   .footer-logo img {
-    width: 170px; /* Adjust size for small screens */
+    width: 180px; /* Adjust size for small screens */
     height: auto;
     margin: 0 auto;
   }
@@ -1043,8 +1044,8 @@ hr {
   .footer-content {
     display: flex;
     flex-direction: column;
-    width: 100%; /* Full width for stacking */
-    text-align: left; /* Left-align content for links */
+    width: 100%; 
+    text-align: left; 
     gap: 10px;
     padding: 0 20px;
   }
@@ -1052,7 +1053,6 @@ hr {
   .footer-content p {
     font-size: 15px; /* Adjust font size for readability */
     margin: 10px auto;
-    transform: translateY(-10px);
     text-align: left;
   }
 
