--- a/src/App.css
+++ b/src/App.css
@@ -406,7 +406,7 @@ html {
   .contact-button {
     width: 70px;
     height: 35px;
-    margin: 30px 0 0 60px;
+    margin: 30px 0 0 85px;
     font-size: 12px;
     display: flex;
     align-items: center;
@@ -438,8 +438,111 @@ html {
     transform: scale(1.03);
     color: #1772bd;
   }
+
+}
+@media (max-width: 360px){
+  .contact-button {
+    width: 70px;
+    height: 35px;
+    margin: 30px 0 0 55px;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media (min-width: 370px) and (max-width: 377px) {
+  .contact-button {
+    width: 70px;
+    height: 35px;
+    margin: 30px 0 0 72px;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media (min-width: 380px)and (max-width:389px) {
+  .contact-button {
+    width: 70px;
+    height: 35px;
+    margin: 30px 0 0 80px;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
+@media (min-width: 410px)and (max-width:414px) {
+  .contact-button {
+    width: 70px;
+    height: 35px;
+    margin: 30px 0 0 106px;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media (min-width: 445px) and (max-width: 449px) {
+  .contact-button {
+    width: 70px;
+    height: 35px;
+    margin: 30px 0 0 145px;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .homepage-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 0.1rem;
+  }
+
+  /* Hero Section Styles */
+  .hero-section {
+    position: relative;
+    max-width: 400px;
+    margin: 20px 5px;
+    border-radius: 4px;
+  }
+
+  .hero-text {
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    text-align: left;
+    margin: auto auto auto 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-text h1 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    color: white;
+    font-size: 2.5rem;
+    white-space: nowrap;
+    align-self: center;
+    margin: auto auto auto 5px;
+    width: 400px;
+  }
+  /* styling the h1 on the hero page */
+
+  .hero-text h3 {
+    color: white;
+    margin-top: 50px;
+    line-height: 1;
+    font-size: 22px;
+    width: 400px;
+    margin-left: 5px;
+  }
+}
 /*****************************
      NEWSLETTER SECTION
 /*****************************/
@@ -447,8 +550,6 @@ html {
   color: white;
   padding: 2rem;
   border-radius: 8px;
-
- 
 
   max-width: 1200px;
 }
@@ -467,7 +568,6 @@ html {
 
 .new-letter-text {
   margin-bottom: 1rem;
-
 }
 .new-letter-text {
   font-size: 1.4rem;
@@ -478,8 +578,7 @@ html {
   justify-content: center;
   align-items: center;
   font-size: 1rem;
-   width: 100%;
-  
+  width: 100%;
 }
 
 .mailchimp-form input {
@@ -501,7 +600,7 @@ html {
   border: 1px solid#1772bd;
   cursor: pointer;
   width: 120px;
- 
+
   transition: background-color 0.3s;
 }
 .mailchimp-form button:hover {
@@ -702,7 +801,7 @@ html {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 176%;
+    width: 182%;
   }
   .input-field {
     width: 50%;
@@ -1044,8 +1143,8 @@ hr {
   .footer-content {
     display: flex;
     flex-direction: column;
-    width: 100%; 
-    text-align: left; 
+    width: 100%;
+    text-align: left;
     gap: 10px;
     padding: 0 20px;
   }
