--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,10 @@ html {
   color: #555;
   line-height: 1.6;
 }
+.icon-container{
+  display: flex;
+  justify-content: center;
+}
 
 .card-icon {
   font-size: 2.5rem;
